--- a/style.css
+++ b/style.css
@@ -1,37 +1,57 @@
-body{
+*,*::before,*::after{
     box-sizing: border-box;
-    margin: 0;
+    font-family: monospace;
+    font-weight: normal;
+}
+
+body{
     padding: 0;
+    margin: 0;
+    background: linear-gradient(to right,#00AAFF,#00FF6C);
 }
-
-
-.wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100svh;
-}
-
-
-
-
-.display{
-    width: 240px;
-    height: 50px;
-}
-
-
-
 
 .calculator-grid{
-    width: 240px;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 100svh;
+    grid-template-columns: repeat(4,100px);
+    grid-template-rows: minmax(120px, auto) repeat(5,100px);
 }
-button{
-    width: 60px;
-    height: 60px;
+
+.calculator-grid > button{
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: 0;
+    background-color: rgba(255, 255, 255, .75);
 }
+
+.calculator-grid >button:hover{
+    background-color: rgba(255, 255, 255, .90);
+}
+
 .span-two{
-    width: 120px;
+    grid-column: span 2;
+}
+
+.output{
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+.output .previous-opp{
+    color: rgba(255,255,255,.75);
+    font-size: 1.5rem;
+}
+
+.output .current-opp{
+    color: rgba(255, 255, 255, 1);
+    font-size: 2.5rem;
 }
